# ticTacToe

./: .gitignore  CMakeLists.txt  Handle.c  Minimax.c  NoGUIv2.c  PMReportGroup08.docx  Q4_decimal2binary_base.c  Q5_binary_addition_base.c  Q6_binary_multiplication_base.c  README.md  README.txt  Update.c  lessSmartAI.c  lessSmartAI_copy_2.c  linear_regression.c  main.c  main.h  main.s  mainmain.c  naivebayes.h  pseudocode.txt  theme.c  theme.h  ticTacToe_NoMinimax  weights.txt  withMinimax.c
DecisionTree_ML/: DTconfusion_matrix.txt  confusion_matrix.txt  confusionmatrix.py  decisiontree.c  decisiontree.h
DeclarationForms/: Tan_Bing_Kun_Terence_Declaration_Form.doc  Tan_Jian_Xin_Declaration_Form.doc
GameFunctions/: AI.c  Check.c  Draw.c  Handle.c  Hint.c  Init.c  Minimax.c  Update.c
NBModel/: NBmodel.c  NBmodel_confusion_matrix.txt  NBmodel_weights.txt  data_processing.c  plot_confusion_matrix.py
NBmodel/: NBmodel.c  NBmodel_confusion_matrix.txt  NBmodel_weights.txt  data_processing.c  plot_confusion_matrix.py
naivebayes_ml/: data_processing.c  game.c  model_weights.txt  naivebayesModel.c  nb_main.c
